# learn-astropy-librarian

./: .pre-commit-config.yaml  .travis.yml  LICENSE.rst  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
astropylibrarian/: __init__.py  __main__.py  keywords.py  resources.py
astropylibrarian/algolia/: client.py  records.py
astropylibrarian/cli/: app.py  index.py  indextutorialdemo.py
astropylibrarian/data/: keywords.yaml
astropylibrarian/reducers/: jupyterbook.py  tutorial.py  utils.py
astropylibrarian/workflows/: deleterooturl.py  download.py  expirerecords.py  indexjupyterbook.py  indexjupyterbookpage.py  indextutorial.py
tests/: conftest.py  test_algolia_client.py  test_algolia_records.py  test_keywords.py  test_reducers_jupyterbook.py  test_reducers_tutorial.py  test_reducers_utils.py  test_workflows_indexjupyterbook.py
tests/data/ccd-guide/: README.md
tests/data/ccd-guide/notebooks/: 00-00-Preface.html  01-05-Calibration-overview.html
tests/data/nbcollection-tutorials/: 2-Coordinates-Transforms-2022-03.html  2-Coordinates-Transforms.html
tests/data/tutorials/: Coordinates-Transform.html  color-excess-v2.html  color-excess.html
