[metadata]
name = astropy-librarian
provides = astropylibrarian
author = J.Sick Codes Inc.
author_email = hi@jsick.codes
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://github.com/jonathansick/astropy-librarian
description = The content crawler that supplies Astropy's web search.
long_description = file: README.rst, file: LICENSE.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
setup_requires =
    setuptools_scm  # legacy backup for pyproject.toml usage

[options.extras_require]
dev =
    pytest==5.3.2
    pytest-flake8==1.0.4
    pytest-mypy==0.4.2

[flake8]
max-line-length = 79

[tool:pytest]
addopts = --flake8 --mypy

[mypy]
ignore_missing_imports = True
