[metadata]
name = astropy-librarian
provides = astropylibrarian
author = J.Sick Codes Inc.
author_email = hi@jsick.codes
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://github.com/jonathansick/astropy-librarian
description = The content crawler that supplies Astropy's web search.
long_description = file: README.rst, file: LICENSE.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
setup_requires =
    setuptools_scm  # legacy backup for pyproject.toml usage
install_requires =
    lxml
    cssselect
    algoliasearch>=2.1.0,<3.0.0
    # Pinning next two to match Algolia docs
    # https://www.algolia.com/doc/api-client/advanced/asynchronous-environments/python/language=python
    aiohttp>=2.0,<4.0
    async_timeout>=<4.0
    PyYAML
    pydantic
    typer

[options.extras_require]
dev =
    pytest>=6.1
    pytest-doctestplus

[options.entry_points]
console_scripts =
    astropylibrarian = astropylibrarian.cli.app:app

[tool:pytest]
doctest_plus = enabled

[flake8]
max-line-length = 79

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
